--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "appwrite",
   "homepage": "https://appwrite.io/support",
-  "description": "Official Appwrite SDK. For full API documentation and tutorials go to [https://appwrite.io/docs](https://appwrite.io/docs)",
+  "description": "Appwrite backend as a service cuts up to 70% of the time and costs required for building a modern application. We abstract and simplify common development tasks behind a REST APIs, to help you develop your app in a fast and secure way. For full API documentation and tutorials go to [https://appwrite.io/docs](https://appwrite.io/docs)",
   "version": "v1.0.0",
   "license": "MIT",
   "main": "src/sdk.js",
