--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "appwrite",
   "homepage": "https://appwrite.io/support",
-  "description": "Appwrite is an open-source backend as a service server that abstract and simplify complex and repetitive development tasks behind a very simple to use REST API. Appwrite aims to help you develop your apps faster and in a more secure way.
-                        Use the JavaScript SDK to integrate your app with the Appwrite server to easily start interacting with all of Appwrite backend APIs and tools.
-                        For full API documentation and tutorials go to [https://appwrite.io/docs](https://appwrite.io/docs)",
+  "description": "Appwrite is an open-source self-hosted backend server that abstract and simplify complex and repetitive development tasks behind a very simple REST API",
   "version": "1.0.29",
   "license": "BSD-3-Clause",
   "main": "src/sdk.js",
+  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/appwrite/sdk-for-js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  "typescript": "^3.6.4"
+  },
   "dependencies": {}
 }
