--- a/package.json
+++ b/package.json
@@ -2,16 +2,39 @@
   "name": "appwrite",
   "homepage": "https://appwrite.io/support",
   "description": "Appwrite is an open-source self-hosted backend server that abstract and simplify complex and repetitive development tasks behind a very simple REST API",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "license": "BSD-3-Clause",
-  "main": "src/sdk.js",
-  "types": "types/index.d.ts",
+  "main": "dist/cjs/sdk.js",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/sdk.js",
+      "require": "./dist/cjs/sdk.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "module": "dist/esm/sdk.js",
+  "types": "types/sdk.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/appwrite/sdk-for-web"
   },
-  "devDependencies": {
-  "typescript": "^3.6.4"
+  "scripts": {
+    "build": "npm run build:types && npm run build:esm && npm run build:cjs && npm run build:iife",
+    "build:types": "tsc --declaration --emitDeclarationOnly --outDir types",
+    "build:esm": "tsc --module es6 --outDir dist/esm",
+    "build:cjs": "rollup dist/esm/sdk.js --format cjs --name Appwrite -e cross-fetch/polyfill --context global -m --no-esModule -o dist/cjs/sdk.js",
+    "build:iife": "rollup dist/esm/sdk.js --format iife --name Appwrite -e cross-fetch/polyfill --context window -m --no-esModule -o dist/iife/sdk.js"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "playwright": "^1.10.0",
+    "rollup": "^2.43.0",
+    "serve-handler": "^6.1.3",
+    "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "cross-fetch": "^3.1.0",
+    "form-data": "^4.0.0"
+  },
+  "jsdelivr": "dist/iife/sdk.js",
+  "unpkg": "dist/iife/sdk.js"
 }
