--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ jobs:
         provider: npm
         email: $NPM_EMAIL
         api_key: $NPM_API_KEY
+        skip_cleanup: true
         on:
           tags: true
