--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "appwrite",
+  "name": "aw-test-realtime",
   "homepage": "https://appwrite.io/support",
   "description": "Appwrite is an open-source self-hosted backend server that abstract and simplify complex and repetitive development tasks behind a very simple REST API",
-  "version": "3.0.1",
+  "version": "0.0.5",
   "license": "BSD-3-Clause",
   "main": "dist/cjs/sdk.js",
   "exports": {
