--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "appwrite",
   "homepage": "https://appwrite.io/support",
   "description": "Appwrite is an open-source self-hosted backend server that abstract and simplify complex and repetitive development tasks behind a very simple REST API",
-  "version": "8.0.1",
+  "version": "9.0.0",
   "license": "BSD-3-Clause",
   "main": "dist/cjs/sdk.js",
   "exports": {
@@ -13,7 +13,7 @@
     "./package.json": "./package.json"
   },
   "module": "dist/esm/sdk.js",
-  "types": "types/sdk.d.ts",
+  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/appwrite/sdk-for-web"
@@ -24,12 +24,12 @@
     "build:libs": "rollup -c"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "8.2.5",
+    "@rollup/plugin-typescript": "8.3.2",
     "playwright": "1.15.0",
-    "rollup": "2.56.3",
-    "serve-handler": "6.1.3",
-    "tslib": "2.3.1",
-    "typescript": "4.2.3"
+    "rollup": "2.75.4",
+    "serve-handler": "6.1.0",
+    "tslib": "2.4.0",
+    "typescript": "4.7.2"
   },
   "dependencies": {
     "cross-fetch": "3.1.5",
