--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,31 @@
-  
 language: node_js
 node_js:
-  - "14.16"
+  - "18.8.0"
 
 jobs:
   include:
-    - stage: npm release
-      node_js: "14.16"
-      script: 
-        - echo "Installing dependencies ..."
-        - npm i
-        - echo "Building library ..."
+    - stage: NPM RC Release
+      if: tag == *-RC*
+      node_js: "18.8.0"
+      script:
+        - npm install
         - npm run build
-        - echo "Deploying to npm ..."
+        - echo "Deploying RC to NPM..."
       deploy:
         provider: npm
         email: $NPM_EMAIL
         api_key: $NPM_API_KEY
-        skip_cleanup: true
+        tag: next
+    - stage: NPM Release
+      if: tag != *-RC*
+      node_js: "18.8.0"
+      script:
+        - npm install
+        - npm run build
+        - echo "Deploying to NPM..."
+      deploy:
+        provider: npm
+        email: $NPM_EMAIL
+        api_key: $NPM_API_KEY
         on:
           tags: true
