fix: web sdk CI issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,6 @@ jobs:
         provider: npm
         email: $NPM_EMAIL
         api_key: $NPM_API_KEY
+        skip_cleanup: true
         on:
           tags: true
