--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "dist/cjs/sdk.js",
   "exports": {
     ".": {
+      "types": "./types/index.d.ts",
       "import": "./dist/esm/sdk.js",
       "require": "./dist/cjs/sdk.js"
     },
