Fix condition for deploying to NPM

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
         api_key: $NPM_API_KEY
         tag: next
     - stage: NPM Release
-      if: tag =~ /-(rc|RC)/
+      if: not tag =~ /-(rc|RC)/
       node_js: "14.16"
       script:
         - npm install
