--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "cross-fetch": "3.1.5",
     "isomorphic-form-data": "2.0.0",
-    "react-native": "^0.73.5"
+    "react-native": "^0.73.5",
+    "react-native-fs": "^2.20.0"
   },
   "jsdelivr": "dist/iife/sdk.js",
   "unpkg": "dist/iife/sdk.js"
