--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "cross-fetch": "3.1.5",
     "isomorphic-form-data": "2.0.0",
     "react-native": "^0.73.5",
-    "react-native-fs": "^2.20.0"
+    "react-native-fs": "^2.20.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "jsdelivr": "dist/iife/sdk.js",
   "unpkg": "dist/iife/sdk.js"
