--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "appwrite",
   "homepage": "https://appwrite.io/support",
   "description": "Appwrite is an open-source self-hosted backend server that abstract and simplify complex and repetitive development tasks behind a very simple REST API",
-  "version": "17.0.0-rc1",
+  "version": "17.0.0",
   "license": "BSD-3-Clause",
   "main": "dist/cjs/sdk.js",
   "exports": {
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "8.3.2",
-    "playwright": "1.46.0",
     "rollup": "2.75.4",
     "serve-handler": "6.1.0",
     "tslib": "2.4.0",
