--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "appwrite",
   "homepage": "https://appwrite.io/support",
-  "description": "Appwrite is an open-source self-hosted backend server that abstract and simplify complex and repetitive development tasks behind a very simple REST API",
-  "version": "21.5.0",
+  "description": "Appwrite is an open-source self-hosted backend server that abstracts and simplifies complex and repetitive development tasks behind a very simple REST API",
+  "version": "22.0.0",
   "license": "BSD-3-Clause",
   "main": "dist/cjs/sdk.js",
   "exports": {
@@ -24,8 +24,15 @@
     "build:types": "tsc --declaration --emitDeclarationOnly --outDir types",
     "build:libs": "rollup -c"
   },
+  "dependencies": {
+    "json-bigint": "1.0.0",
+    "bignumber.js": "9.0.0"
+  },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "22.0.0",
+    "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "8.3.2",
+    "@types/json-bigint": "1.0.4",
     "playwright": "1.56.1",
     "rollup": "2.79.2",
     "serve-handler": "6.1.0",
